Removed fixed width for Crossing Manager and List Trees so as to prevent vertical scrollbar from being truncated on smaller screens
Issue: GCP-8982

Reviewer: Jaira (post-commit)

--- a/src/main/webapp/VAADIN/themes/gcp-default/styles.css
+++ b/src/main/webapp/VAADIN/themes/gcp-default/styles.css
@@ -182,12 +182,10 @@
 }
 
 .listManagerTree {
-	width: 850px;
 	height: 400px;
 }
 
 .crossingManagerTree {
-	width: 850px;
 	height: 400px;
 }
 
